<resources>
    <string name="app_name">Fight COVID-19</string>

    <!--Navigation-->
    <string name="label_beranda">Beranda</string>
    <string name="label_muat_ulang">Muat ulang</string>
    <string name="label_pesan">Pesan</string>

    <!--Home-->
    <string name="label_positif">Positif</string>
    <string name="label_sembuh">Sembuh</string>
    <string name="label_meninggal">Meninggal</string>
    <string name="label_kasus">Kasus</string>
    <string name="label_layanan">Layanan Aplikasi</string>
    <string name="label_layanan_caption">Nikmati layanan terbaik untuk indonesia sehat</string>
    <string name="label_sponsor">Terima Kasih</string>
    <string name="label_sponsor_caption">Data yang diambil dari open source sumber terpercaya dan sponsor yang membantu</string>

    <!--Inbox-->
    <string name="label_inbox_kosong">Belum ada pesan untuk anda, jangan bersedih.</string>
    <string name="label_inbox_kosong_caption">Tungu update dari aplikasi kami ya, untuk mendapatkan update terbaru terkait COVID-19, dengan tetap #dirumahaja</string>

    <!--Hospital Reference-->
    <string name="label_rs_rujukan">RS Rujukan</string>
    <string name="label_pilih_provinsi">Pilih provinsi</string>
    <string name="label_lihat_daftar">Lihat daftar</string>
    <string name="label_header_rujukan">Rumah sakit rujukan</string>
    <string name="label_caption_rujukan">Temukan rumah sakit untuk melawan COVID-19</string>
    <string name="label_dapatkan_petunjuk">Dapatkan petunjuk arah</string>

    <!--Track ODP-->
    <string name="label_masuk_atau_daftar">Masuk atau daftar?</string>
    <string name="label_nikmati_layanan">Nikmati layanan terbaik untuk #BelitungVScovid19 Jika sudah memiliki akun, silahkan login, dan jika belum, boleh klik daftar</string>
    <string name="label_masuk">Masuk</string>
    <string name="label_daftar">Daftar LLT</string>
    <string name="label_llt">#LiveLoveTracking</string>
    <string name="label_data_pasien">Data Pasien ODS/ODP</string>
    <string name="label_tahap">Tahap</string>
    <string name="label_isi_data">Isi data yuk..</string>
    <string name="label_isi_data_caption">Data ini untuk membantu #gardaterdepan agar bisa memantau dan membantu ketika suhu anda mengalami gejala COVID19</string>
    <string name="label_nama">Nama</string>
    <string name="label_usia">Usia</string>
    <string name="label_nomor_hp">Nomor telepon genggam</string>
    <string name="label_nomor_ktp">Nomor KTP</string>
    <string name="label_email">E-mail</string>
    <string name="label_alamat">Alamat</string>
    <string name="label_lanjutkan">Lanjutkan</string>

</resources>
