<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        <variable
            name="viewModel"
            type="id.rumahawan.fightcovid19.features.tracking.viewmodel.ViewModelTrackOdp" />
    </data>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.tracking.ui.ActivityTrackOdp">

        <include
            android:id="@+id/include"
            app:title="@{viewModel.title}"
            app:onNavigationBackClick="@{viewModel.onNavigationBackClick}"
            layout="@layout/toolbar_up" />

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/label_masuk_atau_daftar"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/lightBlack"
            app:layout_constraintTop_toBottomOf="@id/include"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvCaption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/label_nikmati_layanan"
            android:textSize="10sp"
            android:textStyle="bold"
            android:textColor="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/tvHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvLogin"
            android:onClick="@{viewModel::onLoginPressed}"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:paddingHorizontal="12dp"
            android:paddingVertical="4dp"
            android:gravity="center"
            android:background="@drawable/border_light_gray"
            android:text="@string/label_masuk"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            app:autoSizeStepGranularity="0.5sp"
            app:autoSizeTextType="uniform"
            app:autoSizeMaxTextSize="16sp"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintTop_toBottomOf="@id/tvCaption"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvRegister"/>

        <TextView
            android:id="@+id/tvRegister"
            android:onClick="@{viewModel::onRegisterPressed}"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:paddingHorizontal="12dp"
            android:paddingVertical="4dp"
            android:gravity="center"
            android:background="@drawable/background_primary"
            android:text="@string/label_daftar"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            app:autoSizeStepGranularity="0.5sp"
            app:autoSizeTextType="uniform"
            app:autoSizeMaxTextSize="16sp"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintTop_toBottomOf="@id/tvCaption"
            app:layout_constraintStart_toEndOf="@id/tvLogin"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvService"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/label_layanan"
            android:textSize="20sp"
            android:textColor="@color/lightBlack"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tvRegister"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvServiceCaption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/label_layanan_caption"
            android:textSize="10sp"
            android:textColor="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/tvService"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="SmallSp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:clipToPadding="false"
            android:background="@color/darkWhite"
            android:nestedScrollingEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/tvServiceCaption"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>