<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="id.rumahawan.ifightco.features.tracking.viewmodel.ViewModelRegisterOne" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.tracking.ui.ActivityRegisterOne">

        <include
            android:id="@+id/include"
            app:title="@{viewModel.title}"
            app:onNavigationBackClick="@{viewModel.onNavigationBackClick}"
            layout="@layout/toolbar_up" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingVertical="16dp"
            android:clipToPadding="false"
            app:layout_constraintTop_toBottomOf="@+id/include"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvNext">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivStage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="16dp"
                    android:src="@drawable/ic_one_of_two"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/label_tahap"
                    app:layout_constraintWidth_percent="0.3"
                    app:layout_constraintTop_toBottomOf="@+id/include"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/tvHeader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/label_isi_data"
                    android:textColor="@color/lightBlack"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/ivStage"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/tvCaption"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/label_isi_data_caption"
                    android:textColor="@color/gray"
                    android:textSize="10sp"
                    app:layout_constraintTop_toBottomOf="@+id/tvHeader"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/tilName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="16dp"
                    app:hintEnabled="false"
                    app:layout_constraintTop_toBottomOf="@id/tvCaption"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">
                    <EditText
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.name}"
                        android:textSize="14sp"
                        android:hint="@string/label_nama"
                        android:lines="1"
                        android:inputType="textCapWords|textPersonName"
                        android:imeOptions="actionNext"
                        tools:ignore="LabelFor" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/tilAge"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginHorizontal="16dp"
                    app:hintEnabled="false"
                    app:layout_constraintTop_toBottomOf="@id/tilName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">
                    <EditText
                        android:id="@+id/etAge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.age}"
                        android:textSize="14sp"
                        android:hint="@string/label_usia"
                        android:lines="1"
                        android:maxLength="2"
                        android:inputType="number"
                        android:digits="0123456789"
                        android:imeOptions="actionNext"
                        tools:ignore="LabelFor" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/tilPhone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginHorizontal="16dp"
                    app:hintEnabled="false"
                    app:layout_constraintTop_toBottomOf="@id/tilAge"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">
                    <EditText
                        android:id="@+id/etPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.phone}"
                        android:textSize="14sp"
                        android:hint="@string/label_nomor_hp"
                        android:inputType="phone"
                        android:lines="1"
                        android:maxLength="13"
                        android:digits="0123456789"
                        android:imeOptions="actionNext"
                        tools:ignore="LabelFor" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/tilId"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginHorizontal="16dp"
                    app:hintEnabled="false"
                    app:layout_constraintTop_toBottomOf="@id/tilPhone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">
                    <EditText
                        android:id="@+id/etId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.id}"
                        android:textSize="14sp"
                        android:hint="@string/label_nomor_ktp"
                        android:lines="1"
                        android:inputType="number"
                        android:maxLength="16"
                        android:digits="0123456789"
                        android:imeOptions="actionNext"
                        tools:ignore="LabelFor" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/tilEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginHorizontal="16dp"
                    app:error="@{viewModel.emailError}"
                    app:hintEnabled="false"
                    app:layout_constraintTop_toBottomOf="@id/tilId"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">
                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.email}"
                        android:textSize="14sp"
                        android:hint="@string/label_email"
                        android:lines="1"
                        android:inputType="textEmailAddress"
                        android:imeOptions="actionNext"
                        tools:ignore="LabelFor" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/tilAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginHorizontal="16dp"
                    app:hintEnabled="false"
                    app:layout_constraintTop_toBottomOf="@id/tilEmail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">
                    <EditText
                        android:id="@+id/etAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.address}"
                        android:textSize="14sp"
                        android:hint="@string/label_alamat"
                        android:inputType="textCapSentences|textMultiLine"
                        android:overScrollMode="always"
                        android:scrollbarStyle="insideInset"
                        android:lines="3"
                        tools:ignore="LabelFor" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <Button
            android:id="@+id/tvNext"
            android:onClick="@{viewModel::onNextPressed}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:paddingVertical="16dp"
            android:paddingHorizontal="12dp"
            android:text="@string/label_lanjutkan"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:enabled="@{viewModel.buttonEnabled}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>