<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="id.rumahawan.fightcovid19.features.main.viewmodel.ViewModelReference" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.main.ui.activity.ActivityReference">

        <include
            android:id="@+id/include"
            app:title="@{viewModel.title}"
            app:onNavigationBackClick="@{viewModel.onNavigationBackClick}"
            layout="@layout/toolbar_up" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:id="@+id/tilProvince"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/include"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <AutoCompleteTextView
                android:id="@+id/atvProvince"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_pilih_provinsi"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/label_header_rujukan"
            android:textSize="16sp"
            android:textColor="@color/lightBlack"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tilProvince"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvCaption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/label_caption_rujukan"
            android:textSize="10sp"
            android:textColor="@color/gray"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tvHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <id.rumahawan.fightcovid19.utils.customcomponent.CustomMapView
            android:id="@+id/mvMain"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:background="@color/lightGray"
            app:layout_constraintDimensionRatio="H, 3:2"
            app:layout_constraintTop_toBottomOf="@id/tvCaption"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvSeeAll"
            android:onClick="@{viewModel::onSeeAllPressed}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/label_lihat_daftar"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:visibility="@{viewModel.seeListVisibility, default=gone}"
            app:layout_constraintTop_toBottomOf="@id/mvMain"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/ivLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_location_on_black_24dp"
            android:tint="@color/gray"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintTop_toBottomOf="@id/tvSeeAll"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvAddress"/>

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:text="@{viewModel.address}"
            android:textSize="12sp"
            android:textColor="@color/lightBlack"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintTop_toBottomOf="@id/tvSeeAll"
            app:layout_constraintStart_toEndOf="@id/ivLocation"
            app:layout_constraintEnd_toEndOf="@id/ivRefresh"
            tools:text="Jln. Kemang Utara No.26b, Mampang Prapatan, Jakarta Selatan, DKI Jakata"/>

        <ImageView
            android:id="@+id/ivRefresh"
            android:onClick="@{viewModel::onRefreshPressed}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_refresh"
            android:tint="@color/colorPrimary"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintTop_toBottomOf="@id/tvSeeAll"
            app:layout_constraintStart_toEndOf="@id/tvAddress"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>